Revert "Merge pull request #2895 from defold/DEFEDIT-revert-openjdk-update"
This reverts commit cd3e00c7224aeb7f0c15f5ee10d581443904ffbb, reversing
changes made to 0b6ca74b6ce5241c18d4bcc3a5ab0ff70ee14538.